tests/snapshots/spanshot_request@1459729197319677439.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_expr: AllocTemporary, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `ref mut x: T`

ref mut x @ p: T
// Applying rule `Binding`
x @ &mut p: &mut T

// Final bindings:
let x: &mut T = &mut p
