tests/snapshots/spanshot_request@14874584954285276709.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: Skip, mut_on_ref: ResetBindingMode, allow_ref_pat_on_ref_mut: false, simplify_expressions: false, eat_two_layers: true, eat_inherited_ref_alone: false }"
---
Query: `[&x]: &[&T]`

[&x] @ p: &[&T]
// Applying rule `ConstructorRef`
&x @ &(*p).0: &&T
// Applying rule `Deref`
x @ *(*p).0: T

// Final bindings:
let x: T = *(*p).0
