tests/snapshots/spanshot_request@15037928637121184265.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[x]: &mut &mut [T]`

[x] @ p: &mut &mut [T]
// Applying rule `ConstructorMultiRef`
[x] @ &mut **p: &mut [T]
// Applying rule `ConstructorRef`
x @ &mut (*&mut **p).0: &mut T

// Final bindings:
let x: &mut T = &mut (*&mut **p).0
